;;;; -*- coding: utf-8; fill-column: 78 -*-
changes in sbcl-1.3.21 relative to sbcl-1.3.20:
  * minor incompatible change: the CLOBBER-IT restart for defstruct redefintion
    has been removed after a 15 year deprecation cycle. Use the new name,
    RECKLESSLY-CONTINUE. Note also that this restart is hidden if deemed unsafe
    due to altered placement of untagged slots in the structure.
  * enhancement: the assignment of -DSBCL_PREFIX= in src/runtime/GNUmakefile
    can be removed as a local patch, which results in an sbcl executable
    that finds its core file relative to itself by looking in "../lib/sbcl".
  * enhancement: backends using the generational GC are able to relocate
    dynamic space anywhere the operating system places it.
    This feature can be disabled by removing :relocatable-heap from the
    build configuration. Not supported on Windows.
  * enhancement: DEFMETHOD no longer signals IMPLICIT-GENERIC-FUNCTION-WARNING.
  * enhancement: better type conflict detection for high order functions, e.g.
    (find x "123" :test #'=)
  * enhancement: the tabular output of ROOM is aligned dynamically, preventing
    misaligned tables for larger sizes or counts.
  * enhancement: ROOM reports on immobile space if applicable.
  * optimization: optimized external-format routines.
  * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION returns :IMMOBILE
    instead of :FOREIGN for objects in immobile space.
  * bug fix: dotted lists in special forms and function call forms signal
    an appropriate error
  * bug fix: EQUALP hash tables with pathname keys now ignore internal slots.
    (lp#1712944, reported by Jason Miller)

changes in sbcl-1.3.20 relative to sbcl-1.3.19:
  * minor incompatible change: DEF{GENERIC,METHOD} no longer accept some
    illegal lambda lists such as (defgeneric bar (foo &key foo)) or
    (defgeneric baz (t)) that were accepted before.
  * optimization: a valueless &AUX binding in a BOA constructor does not