@@ -1,4 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
+changes relative to sbcl-1.3.21:
+  * minor incompatible change: DESTRUCTURING-BIND treats non-toplevel () as
+    nested empty pattern. This seems to be what the standard mandates, so
+    conforming code should not be affected.
+
 changes in sbcl-1.3.21 relative to sbcl-1.3.20:
   * minor incompatible change: the CLOBBER-IT restart for defstruct redefintion
     has been removed after a 15 year deprecation cycle. Use the new name,
